[package]
name = "buruma"
version = "0.1.0"
authors = ["kaixinbaba <452914639@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = { version = "0.3.6", features = ["full"] }
bytes = "0.6.0"
lazy_static = "1.4.0"