[package]
name = "buruma"
version = "0.1.0"
authors = ["kaixinbaba <452914639@qq.com>"]
edition = "2018"
description = "A Powerful async ZooKeeper Client with tokio."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = { version = "0.3.6", features = ["full"] }
bytes = "0.6.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
futures-timer = "3.0.2"
cmd_lib = "1.2.4"