[package]
name = "repeekooz"
version = "0.1.0"
authors = ["kaixinbaba <452914639@qq.com>"]
edition = "2021"
description = "A Powerful async ZooKeeper Client with tokio."
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "repeekooz-tui",
]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.18", features = ["full"] }
bytes = "1"
lazy_static = "1.4.0"
chrono = "0.4"
futures-timer = "3"
cmd_lib = "1.2.4"
anyhow = "1"
thiserror = "1"
