[package]
name = "repeekooz-tui"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Xun 452914639@qq.com"]
license = "GPL-3.0-or-later"
description = "A TUI application to handle ZooKeeper"
readme = "README.md"
homepage = "https://github.com/kaixinbaba/repeekooz"
repository = "https://github.com/kaixinbaba/repeekooz"
keywords = ["tui", "cli", "zookeeper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
name = "zkp"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# self
repeekooz = { path = ".." }

# 三方
anyhow = "1"

thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4"

tui = "0.18"

crossterm = "0.23"

clap = {version = "3.1.8", features = ["derive"]}

crossbeam-channel = "0.5"

tokio = { version = "1.18", features = ["full"] }
better-panic = "0.3.0"
